--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 const  firebaseConfig = {
 apiKey: "AIzaSyCfbcF1rqWcqcdej0wz4UhlSqlMWwJogDI",
-authDomain: "cw.github.io",
+authDomain: "bossezra-1dc97.appspot.com",
 databaseURL: "https://bossezra-1dc97-default-rtdb.firebaseio.com",
 projectId: "bossezra-1dc97",
 storageBucket: "bossezra-1dc97.appspot.com",
