--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Login Page</title>
+  <title>Admin Login</title>
   <style>
     .container {
       width: 300px;
@@ -56,7 +56,7 @@
       const password = document.getElementById('password').value;
       
       // Validate the username and password
-      if (username === 'ezra' && password === 'mods') {
+      if (username === 'ezra' && password === 'dds') {
         // Redirect to the contents of the web
         window.location.href = 'contents.html';
       } else {
