--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       const password = document.getElementById('password').value;
       
       // Validate the username and password
-      if (username === 'ezra' && password === 'dds') {
+      if (username === 'ezramods' && password === 'dds') {
         // Redirect to the contents of the web
         window.location.href = 'contents.html';
       } else {
