--- a/index.html
+++ b/index.html
@@ -65,4 +65,19 @@
     }
   </script>
 </body>
+  <!--- 
+    error_text: Message to display if there is an error.
+    success_text: Message to display if the form is successfully submitted.
+    disable_waittime: If true, it will not froze a new form subission (after one is successfull) for half a day.
+    form_worker_url: URL to the cloudflare backend.
+  -->
+
+<script
+  src="https://cdn.jsdelivr.net/gh/lucasgerman55/cntct@main/src/contact-form.js"
+  id="contactform"
+  error_text=""
+  success_text=""
+  disable_waittime="true"
+  form_worker_url="https://hello-world-yellow-base-3b61.lucasgerman7777.workers.dev/"
+></script>
 </html>
