--- a/contents.html
+++ b/contents.html
@@ -13,13 +13,13 @@
 //EDIT UNDER THIS ONLY
 
 const  firebaseConfig = {
-apiKey: "AIzaSyCfbcF1rqWcqcdej0wz4UhlSqlMWwJogDI",
-authDomain: "bossezra-1dc97.appspot.com",
-databaseURL: "https://bossezra-1dc97-default-rtdb.firebaseio.com",
-projectId: "bossezra-1dc97",
-storageBucket: "bossezra-1dc97.appspot.com",
-messagingSenderId: "590831773559",
-appId: "1:590831773559:android:94f809fc01b3296e7be372"
+apiKey: "AIzaSyB3KUtWC6VRqShUNPTGppL9wlAiyX6spc4",
+authDomain: "project24-4def3.appspot.com",
+databaseURL: "https://project24-4def3-default-rtdb.firebaseio.com",
+projectId: "project24-4def3",
+storageBucket: "project24-4def3.appspot.com",
+messagingSenderId: "463291571791",
+appId: "1:463291571791:android:7b2b47b9f5e909cd72d43a"
 };
  
 
