--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </head>
 <body>
   <div class="container">
-    <h2>Login</h2>
+    <h2>Logins</h2>
     <form onsubmit="validateForm(event)">
       <label for="username">Username:</label>
       <input type="text" id="username" name="username" required><br><br>
